--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ChatlogActivity"></activity>
         <activity android:name=".LatestMassageActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -25,8 +27,9 @@
         </activity>
         <activity android:name=".LoginActivity" />
         <activity android:name=".NewMassageActivity">
-            <meta-data android:name="android.support.PARENT_ACTIVITY"
-                android:value=".LatestMassageActivity"/>
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".LatestMassageActivity" />
         </activity>
     </application>
 
