--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Room.RoomMainActivity"></activity>
-        <activity android:name=".Room.RoomGameActivity">
+        <activity android:name=".Room.RoomMainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".Room.RoomGameActivity">
+
         </activity>
         <activity android:name=".Room.RoomStartActivity" />
         <activity android:name=".Room.RoomChoiceActivity" />
