--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,23 @@
         android:theme="@style/AppTheme">
         <activity android:name=".Room.RoomMainActivity"
                 android:windowSoftInputMode="adjustPan">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+        </activity>
+        <activity android:name=".Room.RoomGameActivity">
+
+        </activity>
+        <activity android:name=".Room.RoomStartActivity" />
+        <activity android:name=".Room.RoomChoiceActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Room.RoomGameActivity">
-
-        </activity>
-        <activity android:name=".Room.RoomStartActivity" />
-        <activity android:name=".Room.RoomChoiceActivity" />
         <activity android:name=".Board.AnotherBoardActivity" />
         <activity android:name=".Board.BoardActivity">
 
