--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,7 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation "com.xwray:groupie:2.1.0"
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 }
